--- a/app/src/main/res/layout/item_chat_2.xml
+++ b/app/src/main/res/layout/item_chat_2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/text"
@@ -10,7 +10,7 @@
         android:text="dff"
         android:gravity="center"
         android:textColor="@android:color/black"
-        android:textSize="28sp"
+        android:textSize="15sp"
         android:layout_margin="20dp"
         android:background="@drawable/chat_other"
         />
